# kmath

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
include/: kmath.hpp
include/gcem/: CMakeLists.txt  README.md
include/gcem/.github/workflows/: main.yml
include/gcem/docs/: environment.yml
include/gcem/docs/source/: conf.py
include/gcem/docs/source/_static/: main_stylesheet.css
include/gcem/include/: gcem.hpp
include/gcem/include/gcem_incl/: abs.hpp  acos.hpp  acosh.hpp  asin.hpp  asinh.hpp  atan.hpp  atan2.hpp  atanh.hpp  beta.hpp  binomial_coef.hpp  ceil.hpp  copysign.hpp  cos.hpp  cosh.hpp  erf.hpp  erf_inv.hpp  exp.hpp  expm1.hpp  factorial.hpp  find_exponent.hpp  find_fraction.hpp  find_whole.hpp  floor.hpp  fmod.hpp  gcd.hpp  gcem_options.hpp  hypot.hpp  incomplete_beta.hpp  incomplete_beta_inv.hpp  incomplete_gamma.hpp  incomplete_gamma_inv.hpp  inv_sqrt.hpp  is_even.hpp  is_finite.hpp  is_inf.hpp  is_nan.hpp  lbeta.hpp  lcm.hpp  lgamma.hpp  lmgamma.hpp  (+21 more)
include/gcem/tests/: CMakeLists.txt  abs.cpp  acos.cpp  acosh.cpp  asin.cpp  asinh.cpp  atan.cpp  atan2.cpp  atanh.cpp  binomial_coef.cpp  copysign.cpp  cos.cpp  cosh.cpp  erf.cpp  erf_inv.cpp  exp.cpp  expm1.cpp  factorial.cpp  fmod.cpp  gcd.cpp  gcem_tests.hpp  hypot.cpp  incomplete_beta.cpp  incomplete_beta_inv.cpp  incomplete_gamma.cpp  incomplete_gamma_inv.cpp  inv_sqrt.cpp  is_odd.cpp  lcm.cpp  lgamma.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  log_binomial_coef.cpp  other.cpp  pow.cpp  rounding.cpp  signbit.cpp  sin.cpp  (+5 more)
test/: CMakeLists.txt  kmath_test.cpp
(+2 files in other folders)
